alibaba-large/k8s/manifests/envoy-configs.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-configs
data:
  ms-12657.yaml: |
    node:
      id: ms-12657
      cluster: local
    
    stats_config:
      stats_matcher:
        inclusion_list:
          patterns:
          - prefix: "http.inbound_"
    stats_flush_interval: 5s
    
    admin:
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }
    
    static_resources:
      listeners:
      - name: listener_inbound_kiMcs4YawB
        address:
          socket_address: { address: 0.0.0.0, port_value: 3000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: inbound_kiMcs4YawB
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: local
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/benchmark.MS_12657/kiMcs4YawB" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/kiMcs4YawB" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "unknown inbound path" } }
    
              http2_protocol_options: {}
    
      - name: listener_outbound
        address:
          socket_address: { address: 0.0.0.0, port_value: 4000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: outbound
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: egress
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "no egress route" } }
    
              http2_protocol_options: {}
    
      clusters:
      - name: local_app
        connect_timeout: 2s
        type: STATIC
        load_assignment:
          cluster_name: local_app
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: 127.0.0.1, port_value: 2000 }
        http2_protocol_options: {}
    
    
  ms-14758.yaml: |
    node:
      id: ms-14758
      cluster: local
    
    stats_config:
      stats_matcher:
        inclusion_list:
          patterns:
          - prefix: "http.inbound_"
    stats_flush_interval: 5s
    
    admin:
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }
    
    static_resources:
      listeners:
      - name: listener_inbound_Mu-jZ40NDv
        address:
          socket_address: { address: 0.0.0.0, port_value: 3000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: inbound_Mu-jZ40NDv
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: local
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/benchmark.MS_14758/Mu_jZ40NDv" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/Mu-jZ40NDv" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "unknown inbound path" } }
    
              http2_protocol_options: {}
    
      - name: listener_outbound
        address:
          socket_address: { address: 0.0.0.0, port_value: 4000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: outbound
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: egress
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "no egress route" } }
    
              http2_protocol_options: {}
    
      clusters:
      - name: local_app
        connect_timeout: 2s
        type: STATIC
        load_assignment:
          cluster_name: local_app
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: 127.0.0.1, port_value: 2000 }
        http2_protocol_options: {}
    
    
  ms-18750.yaml: |
    node:
      id: ms-18750
      cluster: local
    
    stats_config:
      stats_matcher:
        inclusion_list:
          patterns:
          - prefix: "http.inbound_"
    stats_flush_interval: 5s
    
    admin:
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }
    
    static_resources:
      listeners:
      - name: listener_inbound_vs2nQhH1hq
        address:
          socket_address: { address: 0.0.0.0, port_value: 3000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: inbound_vs2nQhH1hq
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: local
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/benchmark.MS_18750/vs2nQhH1hq" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/vs2nQhH1hq" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "unknown inbound path" } }
    
              http2_protocol_options: {}
    
      - name: listener_outbound
        address:
          socket_address: { address: 0.0.0.0, port_value: 4000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: outbound
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: egress
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "no egress route" } }
    
              http2_protocol_options: {}
    
      clusters:
      - name: local_app
        connect_timeout: 2s
        type: STATIC
        load_assignment:
          cluster_name: local_app
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: 127.0.0.1, port_value: 2000 }
        http2_protocol_options: {}
    
    
  ms-19439.yaml: |
    node:
      id: ms-19439
      cluster: local
    
    stats_config:
      stats_matcher:
        inclusion_list:
          patterns:
          - prefix: "http.inbound_"
    stats_flush_interval: 5s
    
    admin:
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }
    
    static_resources:
      listeners:
      - name: listener_inbound_KvuxGZYcwm
        address:
          socket_address: { address: 0.0.0.0, port_value: 3000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: inbound_KvuxGZYcwm
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: local
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/benchmark.MS_19439/KvuxGZYcwm" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/KvuxGZYcwm" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "unknown inbound path" } }
    
              http2_protocol_options: {}
    
      - name: listener_inbound_ufXkUzqEz3
        address:
          socket_address: { address: 0.0.0.0, port_value: 3001 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: inbound_ufXkUzqEz3
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: local
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/benchmark.MS_19439/ufXkUzqEz3" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/ufXkUzqEz3" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "unknown inbound path" } }
    
              http2_protocol_options: {}
    
      - name: listener_outbound
        address:
          socket_address: { address: 0.0.0.0, port_value: 4000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: outbound
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: egress
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/benchmark.MS_12657/kiMcs4YawB" }
                    route: { cluster: ms-12657-kiMcs4YawB-in, timeout: 10s }
                  - match: { prefix: "/benchmark.MS_45067/wU2EZy8fzO" }
                    route: { cluster: ms-45067-wU2EZy8fzO-in, timeout: 10s }
                  - match: { prefix: "/benchmark.MS_7103/hnZO60j2rH" }
                    route: { cluster: ms-7103-hnZO60j2rH-in, timeout: 10s }
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "no egress route" } }
    
              http2_protocol_options: {}
    
      clusters:
      - name: local_app
        connect_timeout: 2s
        type: STATIC
        load_assignment:
          cluster_name: local_app
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: 127.0.0.1, port_value: 2000 }
        http2_protocol_options: {}
    
      - name: ms-12657-kiMcs4YawB-in
        connect_timeout: 2s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: ms-12657-kiMcs4YawB-in
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: alibaba-large-ms-12657
                    port_value: 3000
        http2_protocol_options:
          max_concurrent_streams: 100
    
      - name: ms-45067-wU2EZy8fzO-in
        connect_timeout: 2s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: ms-45067-wU2EZy8fzO-in
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: alibaba-large-ms-45067
                    port_value: 3000
        http2_protocol_options:
          max_concurrent_streams: 100
    
      - name: ms-7103-hnZO60j2rH-in
        connect_timeout: 2s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: ms-7103-hnZO60j2rH-in
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: alibaba-large-ms-7103
                    port_value: 3000
        http2_protocol_options:
          max_concurrent_streams: 100
    
    
  ms-21298.yaml: |
    node:
      id: ms-21298
      cluster: local
    
    stats_config:
      stats_matcher:
        inclusion_list:
          patterns:
          - prefix: "http.inbound_"
    stats_flush_interval: 5s
    
    admin:
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }
    
    static_resources:
      listeners:
      - name: listener_inbound_Te9DKpWLH7
        address:
          socket_address: { address: 0.0.0.0, port_value: 3000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: inbound_Te9DKpWLH7
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: local
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/benchmark.MS_21298/Te9DKpWLH7" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/Te9DKpWLH7" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "unknown inbound path" } }
    
              http2_protocol_options: {}
    
      - name: listener_inbound_qRB35KFger
        address:
          socket_address: { address: 0.0.0.0, port_value: 3001 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: inbound_qRB35KFger
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: local
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/benchmark.MS_21298/qRB35KFger" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/qRB35KFger" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "unknown inbound path" } }
    
              http2_protocol_options: {}
    
      - name: listener_outbound
        address:
          socket_address: { address: 0.0.0.0, port_value: 4000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: outbound
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: egress
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/benchmark.MS_25806/qQqbn5h_pP" }
                    route: { cluster: ms-25806-qQqbn5h_pP-in, timeout: 10s }
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "no egress route" } }
    
              http2_protocol_options: {}
    
      clusters:
      - name: local_app
        connect_timeout: 2s
        type: STATIC
        load_assignment:
          cluster_name: local_app
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: 127.0.0.1, port_value: 2000 }
        http2_protocol_options: {}
    
      - name: ms-25806-qQqbn5h_pP-in
        connect_timeout: 2s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: ms-25806-qQqbn5h_pP-in
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: alibaba-large-ms-25806
                    port_value: 3002
        http2_protocol_options:
          max_concurrent_streams: 100
    
    
  ms-25781.yaml: |
    node:
      id: ms-25781
      cluster: local
    
    stats_config:
      stats_matcher:
        inclusion_list:
          patterns:
          - prefix: "http.inbound_"
    stats_flush_interval: 5s
    
    admin:
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }
    
    static_resources:
      listeners:
      - name: listener_inbound_qsLpARXiz2
        address:
          socket_address: { address: 0.0.0.0, port_value: 3000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: inbound_qsLpARXiz2
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: local
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/benchmark.MS_25781/qsLpARXiz2" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/qsLpARXiz2" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "unknown inbound path" } }
    
              http2_protocol_options: {}
    
      - name: listener_outbound
        address:
          socket_address: { address: 0.0.0.0, port_value: 4000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: outbound
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: egress
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/benchmark.MS_7103/rswWe4AhfE" }
                    route: { cluster: ms-7103-rswWe4AhfE-in, timeout: 10s }
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "no egress route" } }
    
              http2_protocol_options: {}
    
      clusters:
      - name: local_app
        connect_timeout: 2s
        type: STATIC
        load_assignment:
          cluster_name: local_app
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: 127.0.0.1, port_value: 2000 }
        http2_protocol_options: {}
    
      - name: ms-7103-rswWe4AhfE-in
        connect_timeout: 2s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: ms-7103-rswWe4AhfE-in
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: alibaba-large-ms-7103
                    port_value: 3001
        http2_protocol_options:
          max_concurrent_streams: 100
    
    
  ms-25806.yaml: |
    node:
      id: ms-25806
      cluster: local
    
    stats_config:
      stats_matcher:
        inclusion_list:
          patterns:
          - prefix: "http.inbound_"
    stats_flush_interval: 5s
    
    admin:
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }
    
    static_resources:
      listeners:
      - name: listener_inbound_0PIREyu4tb
        address:
          socket_address: { address: 0.0.0.0, port_value: 3000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: inbound_0PIREyu4tb
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: local
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/benchmark.MS_25806/M0PIREyu4tb" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/0PIREyu4tb" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "unknown inbound path" } }
    
              http2_protocol_options: {}
    
      - name: listener_inbound_FQN3ARekoW
        address:
          socket_address: { address: 0.0.0.0, port_value: 3001 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: inbound_FQN3ARekoW
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: local
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/benchmark.MS_25806/FQN3ARekoW" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/FQN3ARekoW" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "unknown inbound path" } }
    
              http2_protocol_options: {}
    
      - name: listener_inbound_qQqbn5h_pP
        address:
          socket_address: { address: 0.0.0.0, port_value: 3002 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: inbound_qQqbn5h_pP
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: local
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/benchmark.MS_25806/qQqbn5h_pP" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/qQqbn5h_pP" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "unknown inbound path" } }
    
              http2_protocol_options: {}
    
      - name: listener_outbound
        address:
          socket_address: { address: 0.0.0.0, port_value: 4000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: outbound
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: egress
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "no egress route" } }
    
              http2_protocol_options: {}
    
      clusters:
      - name: local_app
        connect_timeout: 2s
        type: STATIC
        load_assignment:
          cluster_name: local_app
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: 127.0.0.1, port_value: 2000 }
        http2_protocol_options: {}
    
    
  ms-2687.yaml: |
    node:
      id: ms-2687
      cluster: local
    
    stats_config:
      stats_matcher:
        inclusion_list:
          patterns:
          - prefix: "http.inbound_"
    stats_flush_interval: 5s
    
    admin:
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }
    
    static_resources:
      listeners:
      - name: listener_inbound_VdboDuPbKj
        address:
          socket_address: { address: 0.0.0.0, port_value: 3000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: inbound_VdboDuPbKj
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: local
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/benchmark.MS_2687/VdboDuPbKj" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/VdboDuPbKj" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "unknown inbound path" } }
    
              http2_protocol_options: {}
    
      - name: listener_outbound
        address:
          socket_address: { address: 0.0.0.0, port_value: 4000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: outbound
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: egress
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "no egress route" } }
    
              http2_protocol_options: {}
    
      clusters:
      - name: local_app
        connect_timeout: 2s
        type: STATIC
        load_assignment:
          cluster_name: local_app
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: 127.0.0.1, port_value: 2000 }
        http2_protocol_options: {}
    
    
  ms-33572.yaml: |
    node:
      id: ms-33572
      cluster: local
    
    stats_config:
      stats_matcher:
        inclusion_list:
          patterns:
          - prefix: "http.inbound_"
    stats_flush_interval: 5s
    
    admin:
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }
    
    static_resources:
      listeners:
      - name: listener_inbound_NdwV_io91H
        address:
          socket_address: { address: 0.0.0.0, port_value: 3000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: inbound_NdwV_io91H
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: local
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/benchmark.MS_33572/NdwV_io91H" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/NdwV_io91H" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "unknown inbound path" } }
    
              http2_protocol_options: {}
    
      - name: listener_outbound
        address:
          socket_address: { address: 0.0.0.0, port_value: 4000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: outbound
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: egress
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "no egress route" } }
    
              http2_protocol_options: {}
    
      clusters:
      - name: local_app
        connect_timeout: 2s
        type: STATIC
        load_assignment:
          cluster_name: local_app
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: 127.0.0.1, port_value: 2000 }
        http2_protocol_options: {}
    
    
  ms-38190.yaml: |
    node:
      id: ms-38190
      cluster: local
    
    stats_config:
      stats_matcher:
        inclusion_list:
          patterns:
          - prefix: "http.inbound_"
    stats_flush_interval: 5s
    
    admin:
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }
    
    static_resources:
      listeners:
      - name: listener_inbound_IC2Ei_gNaE
        address:
          socket_address: { address: 0.0.0.0, port_value: 3000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: inbound_IC2Ei_gNaE
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: local
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/benchmark.MS_38190/IC2Ei_gNaE" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/IC2Ei_gNaE" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "unknown inbound path" } }
    
              http2_protocol_options: {}
    
      - name: listener_outbound
        address:
          socket_address: { address: 0.0.0.0, port_value: 4000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: outbound
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: egress
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "no egress route" } }
    
              http2_protocol_options: {}
    
      clusters:
      - name: local_app
        connect_timeout: 2s
        type: STATIC
        load_assignment:
          cluster_name: local_app
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: 127.0.0.1, port_value: 2000 }
        http2_protocol_options: {}
    
    
  ms-40087.yaml: |
    node:
      id: ms-40087
      cluster: local
    
    stats_config:
      stats_matcher:
        inclusion_list:
          patterns:
          - prefix: "http.inbound_"
    stats_flush_interval: 5s
    
    admin:
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }
    
    static_resources:
      listeners:
      - name: listener_inbound_2QxmWDHq1o
        address:
          socket_address: { address: 0.0.0.0, port_value: 3000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: inbound_2QxmWDHq1o
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: local
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/benchmark.MS_40087/M2QxmWDHq1o" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/2QxmWDHq1o" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "unknown inbound path" } }
    
              http2_protocol_options: {}
    
      - name: listener_inbound_M5ISZV1sCx
        address:
          socket_address: { address: 0.0.0.0, port_value: 3001 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: inbound_M5ISZV1sCx
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: local
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/benchmark.MS_40087/M5ISZV1sCx" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/M5ISZV1sCx" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "unknown inbound path" } }
    
              http2_protocol_options: {}
    
      - name: listener_outbound
        address:
          socket_address: { address: 0.0.0.0, port_value: 4000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: outbound
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: egress
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "no egress route" } }
    
              http2_protocol_options: {}
    
      clusters:
      - name: local_app
        connect_timeout: 2s
        type: STATIC
        load_assignment:
          cluster_name: local_app
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: 127.0.0.1, port_value: 2000 }
        http2_protocol_options: {}
    
    
  ms-41667.yaml: |
    node:
      id: ms-41667
      cluster: local
    
    stats_config:
      stats_matcher:
        inclusion_list:
          patterns:
          - prefix: "http.inbound_"
    stats_flush_interval: 5s
    
    admin:
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }
    
    static_resources:
      listeners:
      - name: listener_inbound_bk01rUGHnE
        address:
          socket_address: { address: 0.0.0.0, port_value: 3000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: inbound_bk01rUGHnE
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: local
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/benchmark.MS_41667/bk01rUGHnE" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/bk01rUGHnE" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "unknown inbound path" } }
    
              http2_protocol_options: {}
    
      - name: listener_outbound
        address:
          socket_address: { address: 0.0.0.0, port_value: 4000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: outbound
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: egress
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "no egress route" } }
    
              http2_protocol_options: {}
    
      clusters:
      - name: local_app
        connect_timeout: 2s
        type: STATIC
        load_assignment:
          cluster_name: local_app
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: 127.0.0.1, port_value: 2000 }
        http2_protocol_options: {}
    
    
  ms-43032.yaml: |
    node:
      id: ms-43032
      cluster: local
    
    stats_config:
      stats_matcher:
        inclusion_list:
          patterns:
          - prefix: "http.inbound_"
    stats_flush_interval: 5s
    
    admin:
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }
    
    static_resources:
      listeners:
      - name: listener_inbound_zSdnWDdKmj
        address:
          socket_address: { address: 0.0.0.0, port_value: 3000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: inbound_zSdnWDdKmj
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: local
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/benchmark.MS_43032/zSdnWDdKmj" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/zSdnWDdKmj" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "unknown inbound path" } }
    
              http2_protocol_options: {}
    
      - name: listener_outbound
        address:
          socket_address: { address: 0.0.0.0, port_value: 4000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: outbound
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: egress
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "no egress route" } }
    
              http2_protocol_options: {}
    
      clusters:
      - name: local_app
        connect_timeout: 2s
        type: STATIC
        load_assignment:
          cluster_name: local_app
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: 127.0.0.1, port_value: 2000 }
        http2_protocol_options: {}
    
    
  ms-43754.yaml: |
    node:
      id: ms-43754
      cluster: local
    
    stats_config:
      stats_matcher:
        inclusion_list:
          patterns:
          - prefix: "http.inbound_"
    stats_flush_interval: 5s
    
    admin:
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }
    
    static_resources:
      listeners:
      - name: listener_inbound_-Rm60xyryM
        address:
          socket_address: { address: 0.0.0.0, port_value: 3000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: inbound_-Rm60xyryM
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: local
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/benchmark.MS_43754/_Rm60xyryM" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/-Rm60xyryM" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "unknown inbound path" } }
    
              http2_protocol_options: {}
    
      - name: listener_outbound
        address:
          socket_address: { address: 0.0.0.0, port_value: 4000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: outbound
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: egress
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "no egress route" } }
    
              http2_protocol_options: {}
    
      clusters:
      - name: local_app
        connect_timeout: 2s
        type: STATIC
        load_assignment:
          cluster_name: local_app
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: 127.0.0.1, port_value: 2000 }
        http2_protocol_options: {}
    
    
  ms-44246.yaml: |
    node:
      id: ms-44246
      cluster: local
    
    stats_config:
      stats_matcher:
        inclusion_list:
          patterns:
          - prefix: "http.inbound_"
    stats_flush_interval: 5s
    
    admin:
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }
    
    static_resources:
      listeners:
      - name: listener_inbound_nRLDYEHBqx
        address:
          socket_address: { address: 0.0.0.0, port_value: 3000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: inbound_nRLDYEHBqx
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: local
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/benchmark.MS_44246/nRLDYEHBqx" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/nRLDYEHBqx" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "unknown inbound path" } }
    
              http2_protocol_options: {}
    
      - name: listener_outbound
        address:
          socket_address: { address: 0.0.0.0, port_value: 4000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: outbound
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: egress
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "no egress route" } }
    
              http2_protocol_options: {}
    
      clusters:
      - name: local_app
        connect_timeout: 2s
        type: STATIC
        load_assignment:
          cluster_name: local_app
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: 127.0.0.1, port_value: 2000 }
        http2_protocol_options: {}
    
    
  ms-45067.yaml: |
    node:
      id: ms-45067
      cluster: local
    
    stats_config:
      stats_matcher:
        inclusion_list:
          patterns:
          - prefix: "http.inbound_"
    stats_flush_interval: 5s
    
    admin:
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }
    
    static_resources:
      listeners:
      - name: listener_inbound_wU2EZy8fzO
        address:
          socket_address: { address: 0.0.0.0, port_value: 3000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: inbound_wU2EZy8fzO
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: local
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/benchmark.MS_45067/wU2EZy8fzO" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/wU2EZy8fzO" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "unknown inbound path" } }
    
              http2_protocol_options: {}
    
      - name: listener_outbound
        address:
          socket_address: { address: 0.0.0.0, port_value: 4000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: outbound
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: egress
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "no egress route" } }
    
              http2_protocol_options: {}
    
      clusters:
      - name: local_app
        connect_timeout: 2s
        type: STATIC
        load_assignment:
          cluster_name: local_app
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: 127.0.0.1, port_value: 2000 }
        http2_protocol_options: {}
    
    
  ms-51783.yaml: |
    node:
      id: ms-51783
      cluster: local
    
    stats_config:
      stats_matcher:
        inclusion_list:
          patterns:
          - prefix: "http.inbound_"
    stats_flush_interval: 5s
    
    admin:
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }
    
    static_resources:
      listeners:
      - name: listener_inbound_zMa4ZJ012X
        address:
          socket_address: { address: 0.0.0.0, port_value: 3000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: inbound_zMa4ZJ012X
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: local
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/benchmark.MS_51783/zMa4ZJ012X" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/zMa4ZJ012X" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "unknown inbound path" } }
    
              http2_protocol_options: {}
    
      - name: listener_outbound
        address:
          socket_address: { address: 0.0.0.0, port_value: 4000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: outbound
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: egress
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "no egress route" } }
    
              http2_protocol_options: {}
    
      clusters:
      - name: local_app
        connect_timeout: 2s
        type: STATIC
        load_assignment:
          cluster_name: local_app
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: 127.0.0.1, port_value: 2000 }
        http2_protocol_options: {}
    
    
  ms-51787.yaml: |
    node:
      id: ms-51787
      cluster: local
    
    stats_config:
      stats_matcher:
        inclusion_list:
          patterns:
          - prefix: "http.inbound_"
    stats_flush_interval: 5s
    
    admin:
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }
    
    static_resources:
      listeners:
      - name: listener_inbound_rypaFB4pfJ
        address:
          socket_address: { address: 0.0.0.0, port_value: 3000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: inbound_rypaFB4pfJ
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: local
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/benchmark.MS_51787/rypaFB4pfJ" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/rypaFB4pfJ" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "unknown inbound path" } }
    
              http2_protocol_options: {}
    
      - name: listener_outbound
        address:
          socket_address: { address: 0.0.0.0, port_value: 4000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: outbound
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: egress
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/benchmark.MS_44246/nRLDYEHBqx" }
                    route: { cluster: ms-44246-nRLDYEHBqx-in, timeout: 10s }
                  - match: { prefix: "/benchmark.MS_56113/KuU4P3BCru" }
                    route: { cluster: ms-56113-KuU4P3BCru-in, timeout: 10s }
                  - match: { prefix: "/benchmark.MS_25806/FQN3ARekoW" }
                    route: { cluster: ms-25806-FQN3ARekoW-in, timeout: 10s }
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "no egress route" } }
    
              http2_protocol_options: {}
    
      clusters:
      - name: local_app
        connect_timeout: 2s
        type: STATIC
        load_assignment:
          cluster_name: local_app
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: 127.0.0.1, port_value: 2000 }
        http2_protocol_options: {}
    
      - name: ms-44246-nRLDYEHBqx-in
        connect_timeout: 2s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: ms-44246-nRLDYEHBqx-in
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: alibaba-large-ms-44246
                    port_value: 3000
        http2_protocol_options:
          max_concurrent_streams: 100
    
      - name: ms-56113-KuU4P3BCru-in
        connect_timeout: 2s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: ms-56113-KuU4P3BCru-in
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: alibaba-large-ms-56113
                    port_value: 3001
        http2_protocol_options:
          max_concurrent_streams: 100
    
      - name: ms-25806-FQN3ARekoW-in
        connect_timeout: 2s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: ms-25806-FQN3ARekoW-in
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: alibaba-large-ms-25806
                    port_value: 3001
        http2_protocol_options:
          max_concurrent_streams: 100
    
    
  ms-53792.yaml: |
    node:
      id: ms-53792
      cluster: local
    
    stats_config:
      stats_matcher:
        inclusion_list:
          patterns:
          - prefix: "http.inbound_"
    stats_flush_interval: 5s
    
    admin:
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }
    
    static_resources:
      listeners:
      - name: listener_inbound_8jkkxghEWB
        address:
          socket_address: { address: 0.0.0.0, port_value: 3000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: inbound_8jkkxghEWB
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: local
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/benchmark.MS_53792/M8jkkxghEWB" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/8jkkxghEWB" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "unknown inbound path" } }
    
              http2_protocol_options: {}
    
      - name: listener_outbound
        address:
          socket_address: { address: 0.0.0.0, port_value: 4000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: outbound
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: egress
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/benchmark.MS_41667/bk01rUGHnE" }
                    route: { cluster: ms-41667-bk01rUGHnE-in, timeout: 10s }
                  - match: { prefix: "/benchmark.MS_5720/M4Cgy9S6B5O" }
                    route: { cluster: ms-5720-4Cgy9S6B5O-in, timeout: 10s }
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "no egress route" } }
    
              http2_protocol_options: {}
    
      clusters:
      - name: local_app
        connect_timeout: 2s
        type: STATIC
        load_assignment:
          cluster_name: local_app
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: 127.0.0.1, port_value: 2000 }
        http2_protocol_options: {}
    
      - name: ms-41667-bk01rUGHnE-in
        connect_timeout: 2s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: ms-41667-bk01rUGHnE-in
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: alibaba-large-ms-41667
                    port_value: 3000
        http2_protocol_options:
          max_concurrent_streams: 100
    
      - name: ms-5720-4Cgy9S6B5O-in
        connect_timeout: 2s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: ms-5720-4Cgy9S6B5O-in
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: alibaba-large-ms-5720
                    port_value: 3000
        http2_protocol_options:
          max_concurrent_streams: 100
    
    
  ms-56113.yaml: |
    node:
      id: ms-56113
      cluster: local
    
    stats_config:
      stats_matcher:
        inclusion_list:
          patterns:
          - prefix: "http.inbound_"
    stats_flush_interval: 5s
    
    admin:
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }
    
    static_resources:
      listeners:
      - name: listener_inbound_0PIREyu4tb
        address:
          socket_address: { address: 0.0.0.0, port_value: 3000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: inbound_0PIREyu4tb
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: local
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/benchmark.MS_56113/M0PIREyu4tb" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/0PIREyu4tb" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "unknown inbound path" } }
    
              http2_protocol_options: {}
    
      - name: listener_inbound_KuU4P3BCru
        address:
          socket_address: { address: 0.0.0.0, port_value: 3001 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: inbound_KuU4P3BCru
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: local
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/benchmark.MS_56113/KuU4P3BCru" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/KuU4P3BCru" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "unknown inbound path" } }
    
              http2_protocol_options: {}
    
      - name: listener_outbound
        address:
          socket_address: { address: 0.0.0.0, port_value: 4000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: outbound
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: egress
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "no egress route" } }
    
              http2_protocol_options: {}
    
      clusters:
      - name: local_app
        connect_timeout: 2s
        type: STATIC
        load_assignment:
          cluster_name: local_app
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: 127.0.0.1, port_value: 2000 }
        http2_protocol_options: {}
    
    
  ms-5720.yaml: |
    node:
      id: ms-5720
      cluster: local
    
    stats_config:
      stats_matcher:
        inclusion_list:
          patterns:
          - prefix: "http.inbound_"
    stats_flush_interval: 5s
    
    admin:
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }
    
    static_resources:
      listeners:
      - name: listener_inbound_4Cgy9S6B5O
        address:
          socket_address: { address: 0.0.0.0, port_value: 3000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: inbound_4Cgy9S6B5O
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: local
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/benchmark.MS_5720/M4Cgy9S6B5O" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/4Cgy9S6B5O" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "unknown inbound path" } }
    
              http2_protocol_options: {}
    
      - name: listener_outbound
        address:
          socket_address: { address: 0.0.0.0, port_value: 4000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: outbound
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: egress
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/benchmark.MS_33572/NdwV_io91H" }
                    route: { cluster: ms-33572-NdwV_io91H-in, timeout: 10s }
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "no egress route" } }
    
              http2_protocol_options: {}
    
      clusters:
      - name: local_app
        connect_timeout: 2s
        type: STATIC
        load_assignment:
          cluster_name: local_app
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: 127.0.0.1, port_value: 2000 }
        http2_protocol_options: {}
    
      - name: ms-33572-NdwV_io91H-in
        connect_timeout: 2s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: ms-33572-NdwV_io91H-in
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: alibaba-large-ms-33572
                    port_value: 3000
        http2_protocol_options:
          max_concurrent_streams: 100
    
    
  ms-58796.yaml: |
    node:
      id: ms-58796
      cluster: local
    
    stats_config:
      stats_matcher:
        inclusion_list:
          patterns:
          - prefix: "http.inbound_"
    stats_flush_interval: 5s
    
    admin:
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }
    
    static_resources:
      listeners:
      - name: listener_inbound_abNb-B-h36
        address:
          socket_address: { address: 0.0.0.0, port_value: 3000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: inbound_abNb-B-h36
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: local
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/benchmark.MS_58796/abNb_B_h36" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/abNb-B-h36" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "unknown inbound path" } }
    
              http2_protocol_options: {}
    
      - name: listener_outbound
        address:
          socket_address: { address: 0.0.0.0, port_value: 4000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: outbound
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: egress
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/benchmark.MS_38190/IC2Ei_gNaE" }
                    route: { cluster: ms-38190-IC2Ei_gNaE-in, timeout: 10s }
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "no egress route" } }
    
              http2_protocol_options: {}
    
      clusters:
      - name: local_app
        connect_timeout: 2s
        type: STATIC
        load_assignment:
          cluster_name: local_app
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: 127.0.0.1, port_value: 2000 }
        http2_protocol_options: {}
    
      - name: ms-38190-IC2Ei_gNaE-in
        connect_timeout: 2s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: ms-38190-IC2Ei_gNaE-in
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: alibaba-large-ms-38190
                    port_value: 3000
        http2_protocol_options:
          max_concurrent_streams: 100
    
    
  ms-62039.yaml: |
    node:
      id: ms-62039
      cluster: local
    
    stats_config:
      stats_matcher:
        inclusion_list:
          patterns:
          - prefix: "http.inbound_"
    stats_flush_interval: 5s
    
    admin:
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }
    
    static_resources:
      listeners:
      - name: listener_inbound_nK4gw2phix
        address:
          socket_address: { address: 0.0.0.0, port_value: 3000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: inbound_nK4gw2phix
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: local
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/benchmark.MS_62039/nK4gw2phix" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/nK4gw2phix" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "unknown inbound path" } }
    
              http2_protocol_options: {}
    
      - name: listener_outbound
        address:
          socket_address: { address: 0.0.0.0, port_value: 4000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: outbound
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: egress
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/benchmark.MS_18750/vs2nQhH1hq" }
                    route: { cluster: ms-18750-vs2nQhH1hq-in, timeout: 10s }
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "no egress route" } }
    
              http2_protocol_options: {}
    
      clusters:
      - name: local_app
        connect_timeout: 2s
        type: STATIC
        load_assignment:
          cluster_name: local_app
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: 127.0.0.1, port_value: 2000 }
        http2_protocol_options: {}
    
      - name: ms-18750-vs2nQhH1hq-in
        connect_timeout: 2s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: ms-18750-vs2nQhH1hq-in
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: alibaba-large-ms-18750
                    port_value: 3000
        http2_protocol_options:
          max_concurrent_streams: 100
    
    
  ms-64512.yaml: |
    node:
      id: ms-64512
      cluster: local
    
    stats_config:
      stats_matcher:
        inclusion_list:
          patterns:
          - prefix: "http.inbound_"
    stats_flush_interval: 5s
    
    admin:
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }
    
    static_resources:
      listeners:
      - name: listener_inbound_Z8trRkp4mp
        address:
          socket_address: { address: 0.0.0.0, port_value: 3000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: inbound_Z8trRkp4mp
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: local
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/benchmark.MS_64512/Z8trRkp4mp" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/Z8trRkp4mp" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "unknown inbound path" } }
    
    
      - name: listener_outbound
        address:
          socket_address: { address: 0.0.0.0, port_value: 4000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: outbound
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: egress
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/benchmark.MS_14758/Mu_jZ40NDv" }
                    route: { cluster: ms-14758-Mu-jZ40NDv-in, timeout: 10s }
                  - match: { prefix: "/benchmark.MS_19439/KvuxGZYcwm" }
                    route: { cluster: ms-19439-KvuxGZYcwm-in, timeout: 10s }
                  - match: { prefix: "/benchmark.MS_21298/Te9DKpWLH7" }
                    route: { cluster: ms-21298-Te9DKpWLH7-in, timeout: 10s }
                  - match: { prefix: "/benchmark.MS_21298/qRB35KFger" }
                    route: { cluster: ms-21298-qRB35KFger-in, timeout: 10s }
                  - match: { prefix: "/benchmark.MS_25781/qsLpARXiz2" }
                    route: { cluster: ms-25781-qsLpARXiz2-in, timeout: 10s }
                  - match: { prefix: "/benchmark.MS_25806/M0PIREyu4tb" }
                    route: { cluster: ms-25806-0PIREyu4tb-in, timeout: 10s }
                  - match: { prefix: "/benchmark.MS_2687/VdboDuPbKj" }
                    route: { cluster: ms-2687-VdboDuPbKj-in, timeout: 10s }
                  - match: { prefix: "/benchmark.MS_40087/M2QxmWDHq1o" }
                    route: { cluster: ms-40087-2QxmWDHq1o-in, timeout: 10s }
                  - match: { prefix: "/benchmark.MS_40087/M5ISZV1sCx" }
                    route: { cluster: ms-40087-M5ISZV1sCx-in, timeout: 10s }
                  - match: { prefix: "/benchmark.MS_43032/zSdnWDdKmj" }
                    route: { cluster: ms-43032-zSdnWDdKmj-in, timeout: 10s }
                  - match: { prefix: "/benchmark.MS_51783/zMa4ZJ012X" }
                    route: { cluster: ms-51783-zMa4ZJ012X-in, timeout: 10s }
                  - match: { prefix: "/benchmark.MS_51787/rypaFB4pfJ" }
                    route: { cluster: ms-51787-rypaFB4pfJ-in, timeout: 10s }
                  - match: { prefix: "/benchmark.MS_53792/M8jkkxghEWB" }
                    route: { cluster: ms-53792-8jkkxghEWB-in, timeout: 10s }
                  - match: { prefix: "/benchmark.MS_58796/abNb_B_h36" }
                    route: { cluster: ms-58796-abNb-B-h36-in, timeout: 10s }
                  - match: { prefix: "/benchmark.MS_62039/nK4gw2phix" }
                    route: { cluster: ms-62039-nK4gw2phix-in, timeout: 10s }
                  - match: { prefix: "/benchmark.MS_66921/eFOECNqigM" }
                    route: { cluster: ms-66921-eFOECNqigM-in, timeout: 10s }
                  - match: { prefix: "/benchmark.MS_67465/wIe9cm5aqE" }
                    route: { cluster: ms-67465-wIe9cm5aqE-in, timeout: 10s }
                  - match: { prefix: "/benchmark.MS_70124/v0gqd6H7nw" }
                    route: { cluster: ms-70124-v0gqd6H7nw-in, timeout: 10s }
                  - match: { prefix: "/benchmark.MS_9105/ByihMu7_9Z" }
                    route: { cluster: ms-9105-ByihMu7_9Z-in, timeout: 10s }
                  - match: { prefix: "/benchmark.MS_9105/msD67GoyH2" }
                    route: { cluster: ms-9105-msD67GoyH2-in, timeout: 10s }
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "no egress route" } }
    
              http2_protocol_options: {}
    
      clusters:
      - name: local_app
        connect_timeout: 2s
        type: STATIC
        load_assignment:
          cluster_name: local_app
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: 127.0.0.1, port_value: 2000 }
    
      - name: ms-14758-Mu-jZ40NDv-in
        connect_timeout: 2s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: ms-14758-Mu-jZ40NDv-in
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: alibaba-large-ms-14758
                    port_value: 3000
        http2_protocol_options:
          max_concurrent_streams: 100
    
      - name: ms-19439-KvuxGZYcwm-in
        connect_timeout: 2s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: ms-19439-KvuxGZYcwm-in
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: alibaba-large-ms-19439
                    port_value: 3000
        http2_protocol_options:
          max_concurrent_streams: 100
    
      - name: ms-21298-Te9DKpWLH7-in
        connect_timeout: 2s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: ms-21298-Te9DKpWLH7-in
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: alibaba-large-ms-21298
                    port_value: 3000
        http2_protocol_options:
          max_concurrent_streams: 100
    
      - name: ms-21298-qRB35KFger-in
        connect_timeout: 2s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: ms-21298-qRB35KFger-in
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: alibaba-large-ms-21298
                    port_value: 3001
        http2_protocol_options:
          max_concurrent_streams: 100
    
      - name: ms-25781-qsLpARXiz2-in
        connect_timeout: 2s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: ms-25781-qsLpARXiz2-in
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: alibaba-large-ms-25781
                    port_value: 3000
        http2_protocol_options:
          max_concurrent_streams: 100
    
      - name: ms-25806-0PIREyu4tb-in
        connect_timeout: 2s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: ms-25806-0PIREyu4tb-in
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: alibaba-large-ms-25806
                    port_value: 3000
        http2_protocol_options:
          max_concurrent_streams: 100
    
      - name: ms-2687-VdboDuPbKj-in
        connect_timeout: 2s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: ms-2687-VdboDuPbKj-in
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: alibaba-large-ms-2687
                    port_value: 3000
        http2_protocol_options:
          max_concurrent_streams: 100
    
      - name: ms-40087-2QxmWDHq1o-in
        connect_timeout: 2s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: ms-40087-2QxmWDHq1o-in
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: alibaba-large-ms-40087
                    port_value: 3000
        http2_protocol_options:
          max_concurrent_streams: 100
    
      - name: ms-40087-M5ISZV1sCx-in
        connect_timeout: 2s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: ms-40087-M5ISZV1sCx-in
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: alibaba-large-ms-40087
                    port_value: 3001
        http2_protocol_options:
          max_concurrent_streams: 100
    
      - name: ms-43032-zSdnWDdKmj-in
        connect_timeout: 2s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: ms-43032-zSdnWDdKmj-in
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: alibaba-large-ms-43032
                    port_value: 3000
        http2_protocol_options:
          max_concurrent_streams: 100
    
      - name: ms-51783-zMa4ZJ012X-in
        connect_timeout: 2s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: ms-51783-zMa4ZJ012X-in
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: alibaba-large-ms-51783
                    port_value: 3000
        http2_protocol_options:
          max_concurrent_streams: 100
    
      - name: ms-51787-rypaFB4pfJ-in
        connect_timeout: 2s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: ms-51787-rypaFB4pfJ-in
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: alibaba-large-ms-51787
                    port_value: 3000
        http2_protocol_options:
          max_concurrent_streams: 100
    
      - name: ms-53792-8jkkxghEWB-in
        connect_timeout: 2s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: ms-53792-8jkkxghEWB-in
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: alibaba-large-ms-53792
                    port_value: 3000
        http2_protocol_options:
          max_concurrent_streams: 100
    
      - name: ms-58796-abNb-B-h36-in
        connect_timeout: 2s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: ms-58796-abNb-B-h36-in
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: alibaba-large-ms-58796
                    port_value: 3000
        http2_protocol_options:
          max_concurrent_streams: 100
    
      - name: ms-62039-nK4gw2phix-in
        connect_timeout: 2s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: ms-62039-nK4gw2phix-in
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: alibaba-large-ms-62039
                    port_value: 3000
        http2_protocol_options:
          max_concurrent_streams: 100
    
      - name: ms-66921-eFOECNqigM-in
        connect_timeout: 2s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: ms-66921-eFOECNqigM-in
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: alibaba-large-ms-66921
                    port_value: 3000
        http2_protocol_options:
          max_concurrent_streams: 100
    
      - name: ms-67465-wIe9cm5aqE-in
        connect_timeout: 2s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: ms-67465-wIe9cm5aqE-in
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: alibaba-large-ms-67465
                    port_value: 3000
        http2_protocol_options:
          max_concurrent_streams: 100
    
      - name: ms-70124-v0gqd6H7nw-in
        connect_timeout: 2s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: ms-70124-v0gqd6H7nw-in
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: alibaba-large-ms-70124
                    port_value: 3000
        http2_protocol_options:
          max_concurrent_streams: 100
    
      - name: ms-9105-ByihMu7_9Z-in
        connect_timeout: 2s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: ms-9105-ByihMu7_9Z-in
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: alibaba-large-ms-9105
                    port_value: 3000
        http2_protocol_options:
          max_concurrent_streams: 100
    
      - name: ms-9105-msD67GoyH2-in
        connect_timeout: 2s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: ms-9105-msD67GoyH2-in
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: alibaba-large-ms-9105
                    port_value: 3001
        http2_protocol_options:
          max_concurrent_streams: 100
    
    
  ms-66921.yaml: |
    node:
      id: ms-66921
      cluster: local
    
    stats_config:
      stats_matcher:
        inclusion_list:
          patterns:
          - prefix: "http.inbound_"
    stats_flush_interval: 5s
    
    admin:
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }
    
    static_resources:
      listeners:
      - name: listener_inbound_eFOECNqigM
        address:
          socket_address: { address: 0.0.0.0, port_value: 3000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: inbound_eFOECNqigM
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: local
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/benchmark.MS_66921/eFOECNqigM" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/eFOECNqigM" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "unknown inbound path" } }
    
              http2_protocol_options: {}
    
      - name: listener_outbound
        address:
          socket_address: { address: 0.0.0.0, port_value: 4000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: outbound
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: egress
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/benchmark.MS_43754/_Rm60xyryM" }
                    route: { cluster: ms-43754--Rm60xyryM-in, timeout: 10s }
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "no egress route" } }
    
              http2_protocol_options: {}
    
      clusters:
      - name: local_app
        connect_timeout: 2s
        type: STATIC
        load_assignment:
          cluster_name: local_app
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: 127.0.0.1, port_value: 2000 }
        http2_protocol_options: {}
    
      - name: ms-43754--Rm60xyryM-in
        connect_timeout: 2s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: ms-43754--Rm60xyryM-in
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: alibaba-large-ms-43754
                    port_value: 3000
        http2_protocol_options:
          max_concurrent_streams: 100
    
    
  ms-67465.yaml: |
    node:
      id: ms-67465
      cluster: local
    
    stats_config:
      stats_matcher:
        inclusion_list:
          patterns:
          - prefix: "http.inbound_"
    stats_flush_interval: 5s
    
    admin:
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }
    
    static_resources:
      listeners:
      - name: listener_inbound_wIe9cm5aqE
        address:
          socket_address: { address: 0.0.0.0, port_value: 3000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: inbound_wIe9cm5aqE
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: local
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/benchmark.MS_67465/wIe9cm5aqE" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/wIe9cm5aqE" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "unknown inbound path" } }
    
              http2_protocol_options: {}
    
      - name: listener_outbound
        address:
          socket_address: { address: 0.0.0.0, port_value: 4000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: outbound
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: egress
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/benchmark.MS_19439/ufXkUzqEz3" }
                    route: { cluster: ms-19439-ufXkUzqEz3-in, timeout: 10s }
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "no egress route" } }
    
              http2_protocol_options: {}
    
      clusters:
      - name: local_app
        connect_timeout: 2s
        type: STATIC
        load_assignment:
          cluster_name: local_app
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: 127.0.0.1, port_value: 2000 }
        http2_protocol_options: {}
    
      - name: ms-19439-ufXkUzqEz3-in
        connect_timeout: 2s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: ms-19439-ufXkUzqEz3-in
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: alibaba-large-ms-19439
                    port_value: 3001
        http2_protocol_options:
          max_concurrent_streams: 100
    
    
  ms-70124.yaml: |
    node:
      id: ms-70124
      cluster: local
    
    stats_config:
      stats_matcher:
        inclusion_list:
          patterns:
          - prefix: "http.inbound_"
    stats_flush_interval: 5s
    
    admin:
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }
    
    static_resources:
      listeners:
      - name: listener_inbound_v0gqd6H7nw
        address:
          socket_address: { address: 0.0.0.0, port_value: 3000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: inbound_v0gqd6H7nw
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: local
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/benchmark.MS_70124/v0gqd6H7nw" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/v0gqd6H7nw" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "unknown inbound path" } }
    
              http2_protocol_options: {}
    
      - name: listener_outbound
        address:
          socket_address: { address: 0.0.0.0, port_value: 4000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: outbound
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: egress
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/benchmark.MS_56113/M0PIREyu4tb" }
                    route: { cluster: ms-56113-0PIREyu4tb-in, timeout: 10s }
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "no egress route" } }
    
              http2_protocol_options: {}
    
      clusters:
      - name: local_app
        connect_timeout: 2s
        type: STATIC
        load_assignment:
          cluster_name: local_app
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: 127.0.0.1, port_value: 2000 }
        http2_protocol_options: {}
    
      - name: ms-56113-0PIREyu4tb-in
        connect_timeout: 2s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: ms-56113-0PIREyu4tb-in
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: alibaba-large-ms-56113
                    port_value: 3000
        http2_protocol_options:
          max_concurrent_streams: 100
    
    
  ms-7103.yaml: |
    node:
      id: ms-7103
      cluster: local
    
    stats_config:
      stats_matcher:
        inclusion_list:
          patterns:
          - prefix: "http.inbound_"
    stats_flush_interval: 5s
    
    admin:
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }
    
    static_resources:
      listeners:
      - name: listener_inbound_hnZO60j2rH
        address:
          socket_address: { address: 0.0.0.0, port_value: 3000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: inbound_hnZO60j2rH
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: local
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/benchmark.MS_7103/hnZO60j2rH" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/hnZO60j2rH" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "unknown inbound path" } }
    
              http2_protocol_options: {}
    
      - name: listener_inbound_rswWe4AhfE
        address:
          socket_address: { address: 0.0.0.0, port_value: 3001 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: inbound_rswWe4AhfE
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: local
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/benchmark.MS_7103/rswWe4AhfE" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/rswWe4AhfE" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "unknown inbound path" } }
    
              http2_protocol_options: {}
    
      - name: listener_outbound
        address:
          socket_address: { address: 0.0.0.0, port_value: 4000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: outbound
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: egress
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "no egress route" } }
    
              http2_protocol_options: {}
    
      clusters:
      - name: local_app
        connect_timeout: 2s
        type: STATIC
        load_assignment:
          cluster_name: local_app
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: 127.0.0.1, port_value: 2000 }
        http2_protocol_options: {}
    
    
  ms-9105.yaml: |
    node:
      id: ms-9105
      cluster: local
    
    stats_config:
      stats_matcher:
        inclusion_list:
          patterns:
          - prefix: "http.inbound_"
    stats_flush_interval: 5s
    
    admin:
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }
    
    static_resources:
      listeners:
      - name: listener_inbound_ByihMu7_9Z
        address:
          socket_address: { address: 0.0.0.0, port_value: 3000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: inbound_ByihMu7_9Z
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: local
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/benchmark.MS_9105/ByihMu7_9Z" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/ByihMu7_9Z" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "unknown inbound path" } }
    
              http2_protocol_options: {}
    
      - name: listener_inbound_msD67GoyH2
        address:
          socket_address: { address: 0.0.0.0, port_value: 3001 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: inbound_msD67GoyH2
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: local
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/benchmark.MS_9105/msD67GoyH2" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/msD67GoyH2" }
                    route: { cluster: local_app, timeout: 10s }
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "unknown inbound path" } }
    
              http2_protocol_options: {}
    
      - name: listener_outbound
        address:
          socket_address: { address: 0.0.0.0, port_value: 4000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: outbound
              generate_request_id: false
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: egress
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/" }
                    direct_response: { status: 404, body: { inline_string: "no egress route" } }
    
              http2_protocol_options: {}
    
      clusters:
      - name: local_app
        connect_timeout: 2s
        type: STATIC
        load_assignment:
          cluster_name: local_app
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: 127.0.0.1, port_value: 2000 }
        http2_protocol_options: {}
    
    
  ingress.yaml: |
    node:
      id: ingress
      cluster: local
    
    stats_config:
      stats_matcher:
        inclusion_list:
          patterns:
          - prefix: "http.ingress_"
    stats_flush_interval: 5s
    
    admin:
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }
    
    static_resources:
      listeners:
      - name: listener_Z8trRkp4mp
        address:
          socket_address: { address: 0.0.0.0, port_value: 3000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_Z8trRkp4mp
              generate_request_id: false
              use_remote_address: true
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: entry
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/Z8trRkp4mp" }
                    route: { cluster: entry-Z8trRkp4mp, timeout: 10s }
    
      clusters:
      - name: entry-Z8trRkp4mp
        connect_timeout: 2s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: entry-Z8trRkp4mp
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: alibaba-large-ms-64512
                    port_value: 3000
